--- a/components/Body/Body.module.css
+++ b/components/Body/Body.module.css
@@ -23,6 +23,7 @@
 	position: absolute;
 	width: 672px;
 	height: 54px;
+	color: black;
 
 	left: 64px;
 	top: 490px;
@@ -41,6 +42,8 @@
 	left: 64px;
 	top: 654px;
 
+	color: black;
+
 	font-family: 'Rubik';
 	font-style: normal;
 	font-weight: 700;
@@ -54,6 +57,8 @@
 	height: 42px;
 	left: 64px;
 	top: 724px;
+
+	color: black;
 
 	font-family: 'Rubik';
 	font-style: normal;
